...
            "value": "Proton-Konto und Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Proton Account and Settings"
          }
        }
      }
    },
    "library.options": {
      "extractionState": "manual",
...
