...
                                .foregroundStyle(ProtonColor.textWeak)
                        } label: {
                            Label(
                                String(localized: "settings.albumsync_title"), systemImage: "rectangle.stack.badge.plus"
                            )
                        }
                        .accessibilityIdentifier("albumsync.settings")
                    }
                }
            }
        }
    }

...
